<resources>
    <string name="app_name">BlogPlatform</string>

    <string name="login_title">Login</string>
    <string name="registration_title">Registration</string>
    <string name="error_message">Error</string>
    <string name="server_error">Internal Server Error</string>
    <string name="success">Success</string>

    <string name="username_pole">Username</string>
    <string name="nickname_pole">Nickname</string>
    <string name="email_pole">Email</string>
    <string name="password_pole">Password</string>
    <string name="username_hint">johndoe</string>
    <string name="nickname_hint">johny</string>
    <string name="email_hint">johndoe@gmail.com</string>
    <string name="password_hint">********</string>

    <string name="open_nav">Open Navigation Menu</string>
    <string name="close_nav">Close Navigation Menu</string>

    <string name="new_content">Tell us something...</string>
    <string name="missing_content">You need to type something...</string>
    <string name="new_content_button">Publish</string>

    <string name="user_posts_title">User posts</string>
    <string name="delete_account">Delete</string>
    <string name="user_editinfo_title">Edit info</string>
    <string name="user_editpwd_title">Edit Password</string>
    <string name="user_editpwd_hint">New Password</string>
    <string name="user_editpwd_confirm_hint">Confirm Password</string>
    <string name="editpwd_nomatch">Fields do not match</string>
    <string name="editinfo_apply">Apply</string>
    <string name="editinfo_cancel">Cancel</string>

    <string name="post_title">Post</string>
    <string name="post_comments_title">Comments</string>
    <string name="post_comment_hint">Your opinion...</string>

    <string name="post_delete_dialog_title">Proceed Delete</string>
    <string name="post_delete_dialog_message">Are you sure you want to delete this post?</string>
    <string name="confirm">Confirm</string>

    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_message">Are you sure you want to delete your account forever?</string>

    <string name="search_title">Explore users</string>
    <string name="search_hint">Search for new connections</string>
    <string name="no_items">No results</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>