<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editinfo"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".fragments.userpage.UserUpdateInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editinfo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/istokweb_bold"
            android:gravity="center"
            android:text="@string/user_editinfo_title"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/editpwd_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/istokweb_bold"
            android:text="@string/user_editpwd_title"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/user_editinfo_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_pole"
        android:ems="10"
        android:fontFamily="@font/istokweb_regular"
        android:hint="@string/nickname_hint"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/semiblack" />

    <EditText
        android:id="@+id/user_editinfo_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_pole"
        android:ems="10"
        android:fontFamily="@font/istokweb_regular"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/semiblack" />

    <EditText
        android:id="@+id/user_editinfo_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_pole"
        android:ems="10"
        android:fontFamily="@font/istokweb_regular"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/semiblack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editinfo_cancel"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/istokweb_bold"
            android:text="@string/editinfo_cancel"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/editinfo_apply"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/istokweb_bold"
            android:text="@string/editinfo_apply"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>