<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/user_delete_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/main_color"
            android:fontFamily="@font/istokweb_bold"
            android:text="@string/delete_account_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/user_delete_dialog_message"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/main_color"
            android:text="@string/delete_account_message"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/user_delete_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/editinfo_cancel"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/user_delete_dialog_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/confirm"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>