<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.postpage.PostUpdateInfoFragment" >

    <EditText
        android:id="@+id/post_page_newcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/new_content"
        android:inputType="textMultiLine"
        android:minHeight="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/post_page_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/editinfo_cancel"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/post_page_editcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/new_content_button"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>