<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/border_all"
            android:gravity="center_horizontal"
            android:text="@string/post_title"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/post_page_userinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/post_user_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/avatar_border"
                    android:src="@drawable/user"
                    app:tint="@color/white" />

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border_bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/post_page_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/post_page_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/post_page_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:src="@drawable/trash"
                android:visibility="gone"
                app:tint="@color/red" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/post_page_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:orientation="horizontal"
            android:paddingStart="50dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/post_page_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="30sp"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/post_comments_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_all"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/post_comments_title"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/comment_user_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/avatar_border"
                android:src="@drawable/user"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/post_comment_hint"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp" />

                <Button
                    android:id="@+id/add_comment_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/new_content_button"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>